--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -47,6 +47,7 @@
         "cu-boulder/ucb_styled_block": "dev-main",
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
+        "cu-boulder/ucb_campus_map": "dev-main",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.4",
         "drupal/administerusersbyrole": "^3.4",
