--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -47,7 +47,6 @@
         "cu-boulder/ucb_styled_block": "dev-main",
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
-        "cu-boulder/ucb_campus_map": "dev-main",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.4",
         "drupal/administerusersbyrole": "^3.4",
@@ -59,20 +58,20 @@
         "drupal/ckeditor5_icons": "~1.0",
         "drupal/ckeditor5_paste_filter": "^1.0",
         "drupal/consumer_image_styles": "^4.0",
-        "drupal/jsonapi_extras": "^3.26",
-        "drupal/core-composer-scaffold": "~10.2.0",
-        "drupal/core-project-message": "~10.2.0",
-        "drupal/core-recommended": "~10.2.0",
+        "drupal/core-composer-scaffold": "~10.4.0",
+        "drupal/core-project-message": "~10.4.0",
+        "drupal/core-recommended": "~10.4.0",
         "drupal/devel": "^5.0",
         "drupal/entity_embed": "^1.1",
         "drupal/externalauth": "^2.0",
         "drupal/features": "^3.14",
         "drupal/field_group": "^3.1",
         "drupal/focal_point": "^2.0",
-        "drupal/google_cse": "^4.0",
+        "drupal/google_cse": "^5.0",
         "drupal/google_tag": "^2.0",
+        "drupal/jsonapi_extras": "^3.26",
         "drupal/layout_builder_iframe_modal": "^1.3",
-        "drupal/linkit": "^6.1",
+        "drupal/linkit": "^7.0",
         "drupal/media_alias_display": "^2.0",
         "drupal/media_entity_file_replace": "^1.1",
         "drupal/media_file_delete": "^1.3",
@@ -96,12 +95,14 @@
         "drupal/simple_sitemap": "^4.1",
         "drupal/simplesamlphp_auth": "^4.0",
         "drupal/smtp": "^1.0",
+        "drupal/trash": "^3.0",
         "drupal/twig_tweak": "^3.1",
         "drupal/webform": "^6.2",
         "drush/drush": "^12.1",
         "pantheon-systems/drupal-integrations": "^10",
         "pantheon-systems/pantheon_domain_masking": "^2.0",
         "pantheon-systems/upstream-management": "^1.0",
+        "robrichards/xmlseclibs": "3.1.1",
         "simplesamlphp/simplesamlphp": "^2.2",
         "drupal/config_update": "^2.0@alpha"
     },
