--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -63,6 +63,7 @@
         "drupal/core-recommended": "~10.4.0",
         "drupal/devel": "^5.0",
         "drupal/entity_embed": "^1.1",
+        "drupal/entity_usage": "^2.0@beta",
         "drupal/externalauth": "^2.0",
         "drupal/features": "^3.14",
         "drupal/field_group": "^3.1",
